welcome.lessons.welcome.variables.Variables.scala.error
Variables:4: error: ')' expected but 'if' found.
if (estSurBiscuit()) {prendBiscuit();}
^Variables:5: error: ';' expected but 'while' found.
while(nbPas=nbPas+1()) {recule();}
^