welcome.lessons.welcome.variables.Variables.scala.code
var nbPas: Int=0
while(!estSurBiscuit(){avance() && nbPas=nbPas+1;}
if (estSurBiscuit()) {prendBiscuit();}
while(nbPas=nbPas+1()) {recule();}
poseBiscuit();